# Tenkai-Licenta

./: .gitignore  README.md  link-docx.txt
front_app/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
front_app/src/: app.css  app.html
front_app/src/lib/: captions.vtt  gpx_utils.ts  utils.ts
front_app/src/routes/: +page.svelte  utils.ts
front_app/src/routes/home/: +page.svelte
front_app/src/routes/login/: +page.svelte
front_app/src/routes/profile/: +page.svelte
front_app/static/: gojo.avif
licenta_site/: Dockerfile  ServiceKeyGoogleCloud.json  cors-confing-cloud.json  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  package-lock.json  pyproject.toml  wget-log
licenta_site/base_app/: admin.py  apps.py  middleware.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
licenta_site/base_app/migrations/: 0001_initial.py  0002_alter_userprofile_csrf_token.py  0003_userprofile_has_picture.py
licenta_site/gpx_app/: admin.py  apps.py  cloud_cors_config.py  models.py  tasks.py  urls.py  views.py
licenta_site/gpx_app/migrations/: 0001_initial.py  0002_video_nr_likes_video_timestamp.py  0003_video_city_video_country.py  0004_comment_upvote.py  0005_alter_video_city_alter_video_country.py  0006_alter_video_city_alter_video_country.py  0007_video_description.py
licenta_site/licenta_site/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
licenta_site/video_data/: com.txt  gpx.fmt
licenta_site/video_data/gpx/: test.geojson  test.gpx  test2.gpx
(+5 files in other folders)
