[tool.poetry]
name = "licenta-site"
version = "0.1.0"
description = ""
authors = ["ignatrovino12 <ignatrovino12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.3"
gpxpy = "1.6.2"
pyexiftool = "0.5.6"
celery = "5.4.0"
django-cors-headers = "4.3.1"
google-cloud-storage = "2.16.0"
redis = "^5.0.4"
psycopg2 = "^2.9.9"
geopy = "^2.4.1"
django-allauth = "^0.63.3"
pyjwt = "^2.8.0"
django-extensions = "3.1.5"
pydotplus = "2.0.2"
pyparsing = "^3.1.2"
pydot = "^2.0.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
